frontend/tests/errors/ER-031/fixed_non_native_fractional_cast_not_implemented/test.vx
&^main() -> #i32 {
  x:#u40.4;
  y:#b[8] = (#b[8])x;
  0
}
